# architecture-synthetic-posix-xpack

./: .npmignore  CHANGELOG.md  CMakeLists.txt  NOTES.md  README-MAINTAINER.md  README.md  meson.build  package.json
include/cmsis-plus/rtos/port/: os-c-decls.h  os-decls.h  os-inlines.h
include/micro-os-plus/: architecture.h  device.h
include/micro-os-plus/architecture-synthetic-posix/: defines.h  instructions-inlines.h  instructions.h
include/micro-os-plus/rtos/port/: declarations-c.h  declarations.h  inlines.h
meta/: micro-os-plus-achitecture-synthetic-posix-config-version.cmake  micro-os-plus-architecture-synthetic-posix-config-version.cmake  micro-os-plus-architecture-synthetic-posix-config.cmake  xpack-helper.cmake
rtos-port/include/micro-os-plus/rtos/port/: declarations-c.h  declarations.h  inlines.h
rtos-port/meta/: config.cmake
rtos-port/src/: port.cpp
scripts/: xpacks-helper.sh
src/diag/: trace-posix.cpp
src/rtos/: os-core.cpp
test/trace-stdout/: main.cpp
tests/trace-stderr/: main.cpp
tests/trace-stdout/: main.cpp
